
syntax = "proto3";

// This file follows google's gRPC naming conventions:
// https://cloud.google.com/apis/design/naming_convention

option go_package = "gitlab.figo.systems/platform/monoskope/monoskope/pkg/api/domain/common";

package common;

// ServiceInformation are the version and commit hash of a service
message ServiceInformation {
  // version
  string version = 1;
  // name
  string name = 2;
  // commit hash of the service
  string commit = 3;
}

// Chain of certificates
message CertificateChain {
  // CA Certificate
  bytes ca = 1;
  // Certificate
  bytes certificate = 2;
}
